--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -150,7 +150,7 @@ textarea {
 a {
   color: #337ab7;
   text-decoration: none;
-}/*
+}
 a:hover,
 a:focus {
   color: #23527c;
@@ -160,7 +160,7 @@ a:focus {
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
-}*/
+}
 img {
   vertical-align: middle;
   max-width:100%;
