--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -166,6 +166,11 @@ img {
   max-width:100%;
   height:auto;
 }
+
+.hide-xs-up, .hide-lg-down, .hide-md-down, .hide-sm-down, .hide-xs-down{
+	display:none;
+}
+
 .col-xs-0, .col-sm-0, .col-md-0, .col-lg-0, .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   display:table-cell;
   position: relative;
@@ -220,6 +225,12 @@ img {
   width: 0;
 }
 @media (min-width: 768px) {
+  .hide-sm-up, .hide-lg-down, .hide-md-down, .hide-sm-down{
+	display:none;
+  }
+  .hide-xs-down{
+	display:block;
+  }
   .col-sm-0, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
   }
@@ -264,6 +275,12 @@ img {
   }
 }
 @media (min-width: 992px) {
+  .hide-md-up, .hide-lg-down, .hide-md-down{
+	display:none;
+  }
+  .hide-sm-down{
+	display:block;
+  }
   .col-md-0, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
@@ -308,6 +325,12 @@ img {
   }
 }
 @media (min-width: 1200px) {
+  .hide-lg-up, .hide-lg-down{
+	display:none;
+  }
+  .hide-md-down{
+	display:block;
+  }
   .col-lg-0, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
   }
@@ -388,7 +411,7 @@ img {
 .pull-left {
   float: left !important;
 }
-.hide {
+.hide, .hidden  {
   display: none !important;
 }
 .show {
@@ -403,9 +426,6 @@ img {
   text-shadow: none;
   background-color: transparent;
   border: 0;
-}
-.hidden {
-  display: none !important;
 }
 .affix {
   position: fixed;
