added mixins for generating selectors

--- a/less/fontstrap-base.less
+++ b/less/fontstrap-base.less
@@ -19,6 +19,14 @@
     }
 }
 
+.selector-still(@size, @percent, @unit){
+    .font-@{size}-@{percent}@{unit}{
+        font-size: (@percent / 100)@unit;
+    }
+}
+
+.selector-still(mc, 80, rem);
+
 *{
 	font-size: inherit;
 	font-family: inherit;
