--- a/less/fontstrap-base.less
+++ b/less/fontstrap-base.less
@@ -21,11 +21,22 @@
 
 .selector-still(@size, @percent, @unit){
     .font-@{size}-@{percent}@{unit}{
-        font-size: (@percent / 100)@unit;
+        font-size: @percent/100 @unit;
     }
 }
 
-.selector-still(mc, 80, rem);
+.make-mc-em(@start, @end, @increment) when (@start <= @end){
+    .selector-still(mc, @start, em);
+    .make-mc-em((@start + @increment), @end, @increment);
+}
+
+.make-fonts(@size, @unit @start, @end, @increment) when (@start <= @end){
+    .selector-still(@size, @start, @unit);
+    .make-fonts(@size, @unit, (@start + @increment), @end, @increment);
+}
+
+
+//.selector-still(mc, 80, rem);
 
 *{
 	font-size: inherit;
@@ -36,7 +47,7 @@
 	color: inherit;
 }
 html{
-	//font-size: @font-size-default + @scale-factor-mc;
+	font-size: @font-size-default + @scale-factor-mc;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 }
@@ -47,14 +58,14 @@ section, main, nav, article, footer, header{
 @media (max-width: (@mc-to-xs - 1px) ){
     
     .rem-adjust(@scale-factor-mc);
-    
+    .make-fonts(mc, em, 0, 300, 25);
 }
 
 @media (min-width: @mc-to-xs ){
     .rem-adjust(@scale-factor-xs);
     
     @media(max-width: (@xs-to-sm - 1px)){
-        
+        .make-fonts(xs, em, 0, 300, 25);
     }
 }
 
@@ -62,7 +73,7 @@ section, main, nav, article, footer, header{
     .rem-adjust(@scale-factor-sm);
     
     @media(max-width: (@sm-to-md - 1px)){
-        
+        .make-fonts(sm, em, 0, 300, 25);
     }
 }
 
@@ -70,7 +81,7 @@ section, main, nav, article, footer, header{
     .rem-adjust(@scale-factor-md);
     
     @media(max-width: (@md-to-lg - 1px)){
-        
+        .make-fonts(md, em, 0, 300, 25);
     }
 }
 
@@ -78,11 +89,11 @@ section, main, nav, article, footer, header{
     .rem-adjust(@scale-factor-lg);
     
     @media(max-width: (@lg-to-xl - 1px)){
-        
+        .make-fonts(lg, em, 0, 300, 25);
     }
 }
 
 @media (min-width: @lg-to-xl ){
     .rem-adjust(@scale-factor-xl);
-    
+    .make-fonts(xl, em, 0, 300, 25);
 }
