completed fontstrap less now supports up to 3x font size

--- a/less/fontstrap-base.less
+++ b/less/fontstrap-base.less
@@ -13,28 +13,44 @@
 @scale-factor-lg: -3;
 @scale-factor-xl: -4;
 
+@start-scale-em: 0em;
+@start-scale-rem: 0rem;
+@end-scale: 300;
+@selector-increment: 25;
+
 .rem-adjust(@scaler){
     html{
         font-size: (@font-size-default + @scaler);    
     }
 }
 
-.selector-still(@size, @percent, @unit){
-    .font-@{size}-@{percent}@{unit}{
-        font-size: @percent/100 @unit;
+.selector-still(@size, @percent){
+    .font-@{size}-@{percent}{
+        font-size: @percent/100;
     }
 }
 
-.make-mc-em(@start, @end, @increment) when (@start <= @end){
-    .selector-still(mc, @start, em);
-    .make-mc-em((@start + @increment), @end, @increment);
+.selector-scale(@size, @percent) when not (@size = mc){
+    .font-@{size}-up-@{percent}{
+        font-size: @percent/100;
+    }
 }
 
-.make-fonts(@size, @unit @start, @end, @increment) when (@start <= @end){
-    .selector-still(@size, @start, @unit);
-    .make-fonts(@size, @unit, (@start + @increment), @end, @increment);
+.selector-scale(@size, @percent) when (@size = mc){
+    .font-@{size}-up-@{percent}, .font-@{percent}{
+        font-size: @percent/100;
+    }
 }
 
+.make-fonts(@size, @start, @end, @increment) when (@start <= @end){
+    .selector-still(@size, @start);
+    .make-fonts(@size, (@start + @increment), @end, @increment);
+}
+
+.make-up-fonts(@size, @start, @end, @increment) when (@start <= @end){
+    .selector-scale(@size, @start);
+    .make-up-fonts(@size, (@start + @increment), @end, @increment);
+}
 
 //.selector-still(mc, 80, rem);
 
@@ -55,45 +71,57 @@ section, main, nav, article, footer, header{
 	font-size: 1rem;
 }
 
+.make-up-fonts(mc, @start-scale-em, @end-scale, @selector-increment);
+.make-up-fonts(mc, @start-scale-rem, @end-scale, @selector-increment);
 @media (max-width: (@mc-to-xs - 1px) ){
     
     .rem-adjust(@scale-factor-mc);
-    .make-fonts(mc, em, 0, 300, 25);
+    .make-fonts(mc, @start-scale-em, @end-scale, @selector-increment);
+    .make-fonts(mc, @start-scale-rem, @end-scale, @selector-increment);
 }
 
 @media (min-width: @mc-to-xs ){
     .rem-adjust(@scale-factor-xs);
-    
+    .make-up-fonts(xs, @start-scale-em, @end-scale, @selector-increment);
+    .make-up-fonts(xs, @start-scale-rem, @end-scale, @selector-increment);
     @media(max-width: (@xs-to-sm - 1px)){
-        .make-fonts(xs, em, 0, 300, 25);
+        .make-fonts(xs, @start-scale-em, @end-scale, @selector-increment);
+        .make-fonts(xs, @start-scale-rem, @end-scale, @selector-increment);
     }
 }
 
 @media (min-width: @xs-to-sm ){
     .rem-adjust(@scale-factor-sm);
-    
+    .make-up-fonts(sm, @start-scale-em, @end-scale, @selector-increment);
+    .make-up-fonts(sm, @start-scale-rem, @end-scale, @selector-increment);
     @media(max-width: (@sm-to-md - 1px)){
-        .make-fonts(sm, em, 0, 300, 25);
+        .make-fonts(sm, @start-scale-em, @end-scale, @selector-increment);
+        .make-fonts(sm, @start-scale-rem, @end-scale, @selector-increment);
     }
 }
 
 @media (min-width: @sm-to-md ){
     .rem-adjust(@scale-factor-md);
-    
+    .make-up-fonts(md, @start-scale-em, @end-scale, @selector-increment);
+    .make-up-fonts(md, @start-scale-rem, @end-scale, @selector-increment);
     @media(max-width: (@md-to-lg - 1px)){
-        .make-fonts(md, em, 0, 300, 25);
+        .make-fonts(md, @start-scale-em, @end-scale, @selector-increment);
+        .make-fonts(md, @start-scale-rem, @end-scale, @selector-increment);
     }
 }
 
 @media (min-width: @md-to-lg ){
     .rem-adjust(@scale-factor-lg);
-    
+    .make-up-fonts(lg, @start-scale-em, @end-scale, @selector-increment);
+    .make-up-fonts(lg, @start-scale-rem, @end-scale, @selector-increment);
     @media(max-width: (@lg-to-xl - 1px)){
-        .make-fonts(lg, em, 0, 300, 25);
+        .make-fonts(lg, @start-scale-em, @end-scale, @selector-increment);
+        .make-fonts(lg, @start-scale-rem, @end-scale, @selector-increment);
     }
 }
 
 @media (min-width: @lg-to-xl ){
     .rem-adjust(@scale-factor-xl);
-    .make-fonts(xl, em, 0, 300, 25);
+    .make-fonts(xl, @start-scale-em, @end-scale, @selector-increment);
+    .make-fonts(xl, @start-scale-rem, @end-scale, @selector-increment);
 }
