added css transition animation for font size

--- a/by-hand/src/fontstrap.css
+++ b/by-hand/src/fontstrap.css
@@ -471,3 +471,6 @@ section, main, nav, article, footer, header{
 .child-font-reset > *, .descendants-font-reset *{
 	font-size: 1rem;
 }
+.font-anim, .font-transition{
+	transition:font-size 1s;
+}
