added by-hand updates to by-less repo

--- a/by-less/core/fontstrap-base.less
+++ b/by-less/core/fontstrap-base.less
@@ -150,3 +150,12 @@ section, main, nav, article, footer, header{
 .spacefix:after{
 	content: " ";
 }
+.child-font-reset > *, .descendants-font-reset *{
+	font-size: 1rem;
+}
+.font-anim, .font-transition{
+	transition:font-size 1s;
+}
+.orphin-fix{
+	white-space: nowrap;
+}
