--- a/by-hand/src/bootstrap.css
+++ b/by-hand/src/bootstrap.css
@@ -161,7 +161,7 @@ a:focus {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-img {
+img, svg{
   vertical-align: middle;
   max-width:100%;
   height:auto;
