--- a/by-hand/src/bootstrap.css
+++ b/by-hand/src/bootstrap.css
@@ -166,7 +166,9 @@ img, svg{
   max-width:100%;
   height:auto;
 }
-
+picture img{
+  width:100%;
+}
 .hide-xs-up, .hide-lg-down, .hide-md-down, .hide-sm-down, .hide-xs-down{
 	display:none;
 }
@@ -175,13 +177,13 @@ img, svg{
   display:table-cell;
   position: relative;
   min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 .col-xs-0, .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
-  padding-left:15px;
-  padding-right:15px;
+  padding-left:1em;
+  padding-right:1em;
 }
 .col-xs-12 {
   width: 100%;
@@ -233,8 +235,8 @@ img, svg{
   }
   .col-sm-0, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-	padding-left:15px;
-	padding-right:15px;
+	padding-left:1em;
+	padding-right:1em;
   }
   .col-sm-12 {
     width: 100%;
@@ -287,8 +289,8 @@ img, svg{
   }
   .col-md-0, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-	padding-left:15px;
-	padding-right:15px;
+	padding-left:1em;
+	padding-right:1em;
   }
   .col-md-12 {
     width: 100%;
@@ -341,8 +343,8 @@ img, svg{
   }
   .col-lg-0, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-	padding-left:15px;
-	padding-right:15px;
+	padding-left:1em;
+	padding-right:1em;
   }
   .col-lg-12 {
     width: 100%;
