--- a/by-hand/src/bootstrap.css
+++ b/by-hand/src/bootstrap.css
@@ -179,11 +179,13 @@ picture img{
   min-height: 1px;
   padding-left: 1em;
   padding-right: 1em;
+  font-size:1em;
 }
 .col-xs-0, .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
   padding-left:1em;
   padding-right:1em;
+  font-size:1em;
 }
 .col-xs-12 {
   width: 100%;
@@ -223,8 +225,7 @@ picture img{
 }
 .col-xs-0{
   width: 0;
-  padding-left: 0;
-  padding-right: 0;
+  font-size:0;
 }
 @media (min-width: 768px) {
   .hide-sm-up, .hide-lg-down, .hide-md-down, .hide-sm-down{
@@ -237,6 +238,7 @@ picture img{
     float: left;
 	padding-left:1em;
 	padding-right:1em;
+	font-size:1em;
   }
   .col-sm-12 {
     width: 100%;
@@ -276,8 +278,7 @@ picture img{
   }
   .col-sm-0 {
     width: 0;
-	padding-left: 0;
-	padding-right: 0;
+	font-size:0;
   }
 }
 @media (min-width: 992px) {
@@ -291,6 +292,7 @@ picture img{
     float: left;
 	padding-left:1em;
 	padding-right:1em;
+	font-size:1em;
   }
   .col-md-12 {
     width: 100%;
@@ -330,8 +332,7 @@ picture img{
   }
   .col-md-0 {
     width: 0;
-	padding-left: 0;
-	padding-right: 0;
+	font-size:0;
   }
 }
 @media (min-width: 1200px) {
@@ -345,6 +346,7 @@ picture img{
     float: left;
 	padding-left:1em;
 	padding-right:1em;
+	font-size:1em;
   }
   .col-lg-12 {
     width: 100%;
@@ -384,8 +386,7 @@ picture img{
   }
   .col-lg-0 {
     width: 0;
-	padding-left: 0;
-	padding-right: 0;
+	font-size:0;
   }
 }
 [class*="col-"]:before,
