fixed typo at .font-md-up-175em

--- a/by-hand/src/fontstrap.css
+++ b/by-hand/src/fontstrap.css
@@ -329,8 +329,8 @@ section, main, nav, article, footer, header{
 	font-size:1.5em;
   }
   .font-md-up-175em{
-	font-size:175%
-	font-size:1.75em;;
+	font-size:175%;
+	font-size:1.75em;
   }
   .font-md-up-200em{
 	font-size:200%;
